# tcr_signaling

./: .gitignore  CLAUDE.md  README.md  Status.md  conftest.py  pytest.ini
data/: README.md
examples/: generate_rigidity_movies.py  ks_example.py  ks_example_cli.sh  ks_sweep_and_surrogate.py  plot_sweep.py
examples/specs/: model.kinetic_segregation.extensive.json  model.kinetic_segregation.fast.json  model.kinetic_segregation.regular.json  surrogate.kinetic_segregation.pymc_gp.json  surrogate.kinetic_segregation.sbi_npe.json
models/: __init__.py  kinetic_segregation.py  lck_activity.py  membrane_topography.py  tcr_phosphorylation.py
models/kinetic_segregation/: .gitignore  CMakeLists.txt  Makefile  README.md  __init__.py  __main__.py  animate.py  generate_all_movies.py  generate_depletion_comparison.py  generate_rigidity_sweep.py  generate_screen2.py  generate_small_patch_screen.py  model.py  potentials.py  render_movie.py  test_dt_convergence.py  test_rigidity_convergence.py
models/kinetic_segregation/Methods/: methods.tex
models/kinetic_segregation/benchmark/: run_benchmark.py
models/kinetic_segregation/src/: cell_list.c  cell_list.h  gpu_engine.h  gpu_stub.c  ks_physics.h  main.cpp  metal_engine.m  potentials.c  potentials.h  rng.h  shaders.metal  simulation.c  simulation.h
models/kinetic_segregation/tests/: reference_values.json  test_alignment_changes.py  test_cli.py  test_depletion_metrics.py  test_gpu_cpu_equivalence.py  test_gpu_physics.py  test_mode_defaults.py  test_model.py  test_new_defaults.py  test_physics_regression.py  test_potentials.py
models/kinetic_segregation_gpu/: .gitignore  Makefile  README.md  __init__.py  __main__.py  ks_gpu  render_movie.py
models/kinetic_segregation_gpu/benchmark/: generate_report.py  profile_python.py  results.json  run_benchmark.py
models/kinetic_segregation_gpu/src/: main.m  metal_engine.h  metal_engine.m  potentials.c  potentials.h  rng.c  rng.h  shaders.metal  simulation.c  simulation.h
models/kinetic_segregation_gpu/tests/: reference_values.json  test_cli.py  test_equivalence.py  test_gpu_cpu_equivalence.py  test_gpu_physics.py  test_potentials.py
models/lck_activity/: __init__.py  __main__.py  model.py
models/lck_activity/tests/: test_model.py
models/membrane_topography/: __init__.py  __main__.py  model.py
models/membrane_topography/tests/: test_model.py
models/tcr_phosphorylation/: __init__.py  __main__.py  model.py
models/tcr_phosphorylation/tests/: test_model.py
notebooks/: 01_explore_models.ipynb  02_fit_surrogates.ipynb  03_metamodel_inference.ipynb  04_reproduce_figures.ipynb
specs/: metamodel.tcr_signaling.json  model.kinetic_segregation.json  model.lck_activity.json  model.membrane_topography.json  model.tcr_phosphorylation.json  surrogate.kinetic_segregation.json  surrogate.lck_activity.json  surrogate.membrane_topography.json  surrogate.tcr_phosphorylation.json
